# NeuralVortex

./: .gitignore  LOCAL_SETUP.md  README.md  pyproject.toml  requirements-baseline.txt  requirements-demo.txt  requirements-train.txt  requirements.txt
configs/: default.yaml
data/: README.md  __init__.py  generate.py  solvers.py
demo/: README.md  app_gradio.py  dashboard_data.py
docs/: DEEP_DIVE.md  DEMO.md  pinn_notes.md  report.md
models/: README.md  __init__.py
notebooks/: 01_explore_dataset.ipynb
scripts/: capture_demo_assets.py  plot_inference_panel.py  smoke_test.sh
tests/: test_solvers_smoke.py  test_surrogate_smoke.py
train/: README.md  __init__.py  eval_surrogate.py  field_dataset.py  field_metrics.py  hdf5_loader.py  infer_surrogate.py  pinn_residual_smoke.py  surrogate_models.py  train_sklearn_baseline.py  train_tfno.py
